--- a/AfiliacionServicios/Views/SolicitudAfiliacion/Edit.cshtml
+++ b/AfiliacionServicios/Views/SolicitudAfiliacion/Edit.cshtml
@@ -14,6 +14,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="id" />
             <div class="form-group">
+                <label asp-for="Servicio" class="control-label"></label>
+                <input asp-for="Servicio" class="form-control" />
+                <span asp-validation-for="Servicio" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="NumeroIdentidad" class="control-label"></label>
                 <input asp-for="NumeroIdentidad" class="form-control" />
                 <span asp-validation-for="NumeroIdentidad" class="text-danger"></span>
