Listar solicitudes activas

--- a/AfiliacionServicios/Views/Shared/_Layout.cshtml
+++ b/AfiliacionServicios/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="PorAprobar" asp-action="Index">Aprobar solicitud</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="PorActivar" asp-action="Index">Activar afiliación</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SolicitudAfiliacion" asp-action="SolicitudesActivas">Solicitudes activas</a>
                         </li>
                     </ul>
                 </div>
