Listar las solicitudes aprobadas

--- a/AfiliacionServicios/Views/Shared/_Layout.cshtml
+++ b/AfiliacionServicios/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Personas" asp-action="Index">Personas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SolicitudAfiliacion" asp-action="Index">Solicitudes de afiliación</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SolicitudAfiliacion" asp-action="Index">Solicitudes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="PorAprobar" asp-action="Index">Aprobar solicitud</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SolicitudAfiliacion" asp-action="SolicitudesAprobadas">Solicitudes aprobadas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="SolicitudAfiliacion" asp-action="SolicitudesActivas">Solicitudes activas</a>
